--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -115,7 +115,6 @@ rewrite ^/multiple-personality-disorder/tests-diagnose/?$ https://$host/co-occur
 rewrite ^/multiple-personality-disorder/treat-drug-abuse/?$ https://$host/co-occurring-disorders/dissociative-disorder/ permanent;
 rewrite ^/paranoia-disorders/?$ https://$host/co-occurring-disorders/paranoia-disorders/ permanent;
 rewrite ^/phobias/underlying-causes/?$ https://$host/co-occurring-disorders/paranoia-disorders/ permanent;
-rewrite ^/assessment-diagnose/schizophrenia/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/7-myths/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/compare-drug-induced-psychosis/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
@@ -123,7 +122,6 @@ rewrite ^/treating-schizophrenia-disorder/signs/?$ https://$host/co-occurring-di
 rewrite ^/treat-co-occurring-disorders/signs-symptoms/?$ https://$host/co-occurring-disorders/treatment/ permanent;
 rewrite ^/mood-disorders/doctor-therapist-treat/?$ https://$host/co-occurring-disorders/treatment/ permanent;
 #FACILITY-7295
-rewrite ^/assessment-diagnose/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
 rewrite ^/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
 rewrite ^/obsessive-compulsive-disorder/list-behaviors/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
 rewrite ^/obsessive-compulsive-disorder/treating-addiction/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
@@ -149,7 +147,6 @@ rewrite ^/depression/medicinal-holistic-treatment/?$ https://$host/co-occurring-
 rewrite ^/depression/postpartum-treatment/?$ https://$host/co-occurring-disorders/depression/ permanent;
 rewrite ^/depression/seasonal-affective-disorder/?$ https://$host/co-occurring-disorders/depression/ permanent;
 rewrite ^/mood-disorders/depression-anxiety/?$ https://$host/co-occurring-disorders/depression/ permanent;
-rewrite ^/assessment-diagnose/bipolar-disorder/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
 rewrite ^/bipolar-disorder/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
 rewrite ^/bipolar-disorder/cyclothymic/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
 rewrite ^/bipolar-disorder/rapid-cycling/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
@@ -157,7 +154,6 @@ rewrite ^/bipolar-disorder/types/?$ https://$host/co-occurring-disorders/bipolar
 rewrite ^/anxiety-disorder-treatment/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
 rewrite ^/anxiety-disorder-treatment/diagnose-social/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
 rewrite ^/anxiety-disorder-treatment/vs-panic/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
-rewrite ^/assessment-diagnose/anxiety-disorders/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
 rewrite ^/assessment-diagnose/ptsd/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
 #FACILITY-8966
 rewrite ^/contributors/daniel-mccormick/?$ https://$host/staff/ permanent;
@@ -196,37 +192,37 @@ rewrite ^/prescription-drug-addiction-recovery/opiates-benzodiazepines/?$ https:
 rewrite ^/prescription-drug-addiction-recovery/process-approval/?$ https://$host/addiction-info/ permanent;
 rewrite ^/prescription-drug-addiction-recovery/usa-canada/?$ https://$host/addiction-info/ permanent;
 rewrite ^/prescription-drug-addiction-recovery/zolpidem-ambien/?$ https://$host/addiction-info/ permanent;
-rewrite ^/research/case-decriminalization-drugs/?$ https://$host/research/ permanent;
-rewrite ^/research/curbing-online-sales-synthetic-herbal-drugs/?$ https://$host/research/ permanent;
-rewrite ^/research/dhs-nj-address-addiction/?$ https://$host/research/ permanent;
-rewrite ^/research/drug-related-deaths-new-jersey/?$ https://$host/research/ permanent;
-rewrite ^/research/drugs-legal-others-not/?$ https://$host/research/ permanent;
-rewrite ^/research/drug-trafficking-northeast/?$ https://$host/research/ permanent;
-rewrite ^/research/emergence-drug-courts/?$ https://$host/research/ permanent;
-rewrite ^/research/harm-reduction-syringe-access-programs/?$ https://$host/research/ permanent;
-rewrite ^/research/marijuana-legalization-new-jersey/?$ https://$host/research/ permanent;
-rewrite ^/research/microdosing-psychedelics/?$ https://$host/research/ permanent;
-rewrite ^/research/naloxone-new-jersey-combat-heroin-overdose/?$ https://$host/research/ permanent;
-rewrite ^/research/national-fight-opiate-addiction/?$ https://$host/research/ permanent;
-rewrite ^/research/new-jersey-treatment-industry/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/akorn/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/bristol-meyers-squibb/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/eli-lilly/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/glaxosmithkline/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/insys-therapeutics/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/johnson-johnson/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/lundbeck/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/organon/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/pharmacia/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/recordati/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/roche/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/shire-pharmaceuticals/?$ https://$host/research/ permanent;
-rewrite ^/research/pharmaceutical-industry/wyeth-ayerst-laboratories/?$ https://$host/research/ permanent;
-rewrite ^/research/prescription-drugs-expensive/?$ https://$host/research/ permanent;
-rewrite ^/research/prescription-painkillers-gateway-drug/?$ https://$host/research/ permanent;
-rewrite ^/research/pseudoscience-false-claims-addiction-treatment/?$ https://$host/research/ permanent;
-rewrite ^/research/public-perception-treatment/?$ https://$host/research/ permanent;
-rewrite ^/research/rates-drug-use-urban-suburban-rural/?$ https://$host/research/ permanent;
+rewrite ^/research/case-decriminalization-drugs/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/curbing-online-sales-synthetic-herbal-drugs/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/dhs-nj-address-addiction/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/drug-related-deaths-new-jersey/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/drugs-legal-others-not/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/drug-trafficking-northeast/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/emergence-drug-courts/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/harm-reduction-syringe-access-programs/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/marijuana-legalization-new-jersey/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/microdosing-psychedelics/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/naloxone-new-jersey-combat-heroin-overdose/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/national-fight-opiate-addiction/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/new-jersey-treatment-industry/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/akorn/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/bristol-meyers-squibb/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/eli-lilly/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/glaxosmithkline/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/insys-therapeutics/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/johnson-johnson/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/lundbeck/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/organon/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/pharmacia/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/recordati/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/roche/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/shire-pharmaceuticals/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pharmaceutical-industry/wyeth-ayerst-laboratories/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/prescription-drugs-expensive/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/prescription-painkillers-gateway-drug/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/pseudoscience-false-claims-addiction-treatment/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/public-perception-treatment/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/rates-drug-use-urban-suburban-rural/?$ https://$host/addiction-info/ permanent;
 #FACILITY-10515
 rewrite ^/prepare-aftercare/rules-expectations-sober-living-program/?$ https://$host/addiction-treatment-new-jersey/aftercare/sober-living/rules-expectations/ permanent;
 rewrite ^/prepare-aftercare/roles-sponsor-sponsee/?$ https://$host/addiction-treatment-new-jersey/aftercare/roles-sponsor-sponsee/ permanent;
@@ -262,3 +258,79 @@ rewrite ^/assessment-diagnose/create-addiction-recovery-plan/?$ https://$host/co
 rewrite ^/stop-drinking-alcohol/history-beer/8/5/?$ https://$host/stop-drinking-alcohol/ permanent;
 rewrite ^/stop-drinking-alcohol/history-beer/9/5/?$ https://$host/stop-drinking-alcohol/ permanent;
 rewrite ^/stop-drinking-alcohol/percentage/?$ https://$host/stop-drinking-alcohol/ permanent;
+#FACILITY-10540
+rewrite ^/cause-effect/recognize-presence-mental-health-problem/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/cause-effect/addictive-substances-symptoms/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/top-signs-substance-abuse/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/addiction-dependency-set-in/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/careers-higher-addiction-rates/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/cause-effect/nature-nurture-addiction/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/withdrawal-symptoms-side-effects/?$ https://$host/detox-process/cope-withdrawals/ permanent;
+rewrite ^/cause-effect/physical-psychological-addiction/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/spot-addiction/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/path-drugs-take-body/?$ https://$host/addiction-info/path-drugs-take-body/ permanent;
+rewrite ^/cause-effect/injecting-drugs-smoking/?$ https://$host/addiction-info/path-drugs-take-body/ permanent;
+rewrite ^/cause-effect/steps-take-consumed-spiked-drink/?$ https://$host/addiction-info/steps-take-consumed-spiked-drink/ permanent;
+rewrite ^/cause-effect/date-rape-drugs/?$ https://$host/addiction-info/steps-take-consumed-spiked-drink/ permanent;
+rewrite ^/cause-effect/overdose/?$ https://$host/addiction-info/overdose/ permanent;
+rewrite ^/cause-effect/reasons-addiction/?$ https://$host/addiction-info/reasons-addiction/ permanent;
+rewrite ^/cause-effect/difference-stimulant-depressant/?$ https://$host/addiction-info/difference-stimulant-depressant/ permanent;
+rewrite ^/cause-effect/health-conditions-substance-abuse/?$ https://$host/addiction-info/health-conditions-substance-abuse/ permanent;
+rewrite ^/cause-effect/cutting-agents-drug-manufacturing/?$ https://$host/addiction-info/cutting-agents-drug-manufacturing/ permanent;
+rewrite ^/cause-effect/drugs-more-addictive/?$ https://$host/addiction-info/drugs-more-addictive/ permanent;
+rewrite ^/cause-effect/list-drug-paraphernalia/?$ https://$host/addiction-info/list-drug-paraphernalia/ permanent;
+rewrite ^/cause-effect/difference-snorting-swallowing-drugs/?$ https://$host/addiction-info/difference-snorting-swallowing-drugs/ permanent;
+rewrite ^/cause-effect/help-bad-trip-high/?$ https://$host/addiction-info/help-bad-trip-high/ permanent;
+rewrite ^/cause-effect/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/heroin-use/?$ https://$host/heroin-addiction-treatment/ permanent;
+rewrite ^/cause-effect/alcohol-use/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/cause-effect/ecstasy-use/?$ https://$host/ecstasy-abuse/effects/ permanent;
+rewrite ^/cause-effect/marijuana-use/?$ https://$host/quit-abusing-marijuana/immediate-effects/ permanent;
+rewrite ^/cause-effect/comedown-cocaine-ecstasy/?$ https://$host/cocaine-addiction-treatment/comedown-cocaine-ecstasy/ permanent;
+rewrite ^/cause-effect/cocaine-use/?$ https://$host/cocaine-addiction-treatment/effects-risks/ permanent;
+rewrite ^/research/history-mafia-drugs-crime-atlantic-city/?$ https://$host/addiction-info/history-mafia-drugs-crime-atlantic-city/ permanent;
+rewrite ^/research/liquor-laws-new-jersey/?$ https://$host/addiction-info/liquor-laws-new-jersey/ permanent;
+rewrite ^/research/pharmaceutical-industry/pfizer/?$ https://$host/addiction-info/pharmaceutical-industry/pfizer/ permanent;
+rewrite ^/research/pharmaceutical-industry/purdue-pharma/?$ https://$host/addiction-info/pharmaceutical-industry/purdue-pharma/ permanent;
+rewrite ^/research/pharmaceutical-industry/sanofi-aventis/?$ https://$host/addictio-info/pharmaceutical-industry/sanofi-aventis/ permanent;
+rewrite ^/research/pharmaceutical-industry/?$ https://$host/addiction-info/pharmaceutical-industry/ permanent;
+rewrite ^/research/pharmaceutical-industry/actavis-inc/?$ https://$host/addiction-info/pharmaceutical-industry/actavis-inc/ permanent;
+rewrite ^/research/pharmaceutical-industry/novartis/?$ https://$host/addiction-info/ permanent;
+rewrite ^/contributors/lynda-mcpartlan/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/noel-vargas/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/julieta-bingen/?$ https://$host/staff/ permanent;
+rewrite ^/blog/chronically-late-everything-heres-time/?$ https://$host/blog/tips-to-be-on-time/ permanent;
+rewrite ^/addiction-demographics/codependent-relationships/?$ https://$host/addiction-treatment/treating-codependency/ permanent;
+rewrite ^/addiction-demographics/comorbid-medical-conditions/?$ https://$host/addiction-treatment/comorbid-medical-conditions/ permanent;
+rewrite ^/addiction-demographics/cardiovascular-conditions/?$ https://$host/addiction-treatment/comorbid-medical-conditions/cardiovascular-conditions permanent;
+rewrite ^/addiction-demographics/endocrine-exocrine-systems/?$ https://$host/addiction-treatment/comorbid-medical-conditions/endocrine-exocrine-systems/ permanent;
+rewrite ^/addiction-demographics/gastrointestinal-conditions/?$ https://$host/addiction-treatment/comorbid-medical-conditions/gastrointestinal-conditions/ permanent;
+rewrite ^/addiction-demographics/neurological-disorders/?$ https://$host/addiction-treatment/comorbid-medical-conditions/neurological-disorders/ permanent;
+rewrite ^/addiction-demographics/pregnant-women/?$ https://$host/addiction-treatment/comorbid-medical-conditions/pregnant-women/ permanent;
+rewrite ^/addiction-demographics/renal-urinary-system/?$ https://$host/addiction-treatment/comorbid-medical-conditions/renal-urinary-system/ permanent;
+rewrite ^/addiction-demographics/reproductive-system/?$ https://$host/addiction-treatment/comorbid-medical-conditions/reproductive-system/ permanent;
+rewrite ^/addiction-demographics/respiratory-conditions/?$ https://$host/addiction-treatment/comorbid-medical-conditions/respiratory-conditions/ permanent;
+rewrite ^/addiction-demographics/weaken-suppress-immune-system/?$ https://$host/addiction-treatment/comorbid-medical-conditions/weaken-suppress-immune-system/ permanent;
+rewrite ^/addiction-demographics/executives/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/first-time-rehab-clients/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/infectious-diseases/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/laborers/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/legal-profession/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/medical-profession/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/mentally-disabled/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/morbidly-obese/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/parents/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/physically-disabled/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/professions/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/service-industry/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/service-members/?$ https://$host/veterans-mission-act/alcoholism/ permanent;
+rewrite ^/addiction-demographics/social-services/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/victims-trauma-domestic-abuse/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/airline-industry/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/artists/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/asian-americans/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/co-occurring-disorders/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/addiction-demographics/education-industry/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/emergency-services/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/addiction-demographics/chronic-relapse/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/research/?$ https://$host/addiction-info/ permanent;
