--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -334,3 +334,4 @@ rewrite ^/addiction-demographics/education-industry/?$ https://$host/addiction-d
 rewrite ^/addiction-demographics/emergency-services/?$ https://$host/addiction-demographics/ permanent;
 rewrite ^/addiction-demographics/chronic-relapse/?$ https://$host/addiction-demographics/ permanent;
 rewrite ^/research/?$ https://$host/addiction-info/ permanent;
+rewrite ^/addiction-demographics/musculoskeletal-system/?$ https://$host/addiction-treatment/comorbid-medical-conditions/musculoskeletal-system/ permanent;
