--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -78,7 +78,7 @@ rewrite ^/addiction-treatment/comparing-finance-options/?$ https://$host/addicti
 rewrite ^/family-resources/how-to-help-family-members/?$ https://$host/family-resources/ permanent;
 #FACILITY-7290
 rewrite ^/site-map/?$ https://$host/sitemap_index.xml permanent;
-rewrite ^/frequently-asked-questions/aftercare/?$ https://$host/addiction-treatment-new-jersey/after-rehab/ permanent;
+rewrite ^/frequently-asked-questions/aftercare/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
 rewrite ^/assessment-diagnose/intake-process/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
 rewrite ^/frequently-asked-questions/detox/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/medical-detox/ permanent;
 rewrite ^/frequently-asked-questions/treatment/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
@@ -224,8 +224,6 @@ rewrite ^/research/pseudoscience-false-claims-addiction-treatment/?$ https://$ho
 rewrite ^/research/public-perception-treatment/?$ https://$host/addiction-info/ permanent;
 rewrite ^/research/rates-drug-use-urban-suburban-rural/?$ https://$host/addiction-info/ permanent;
 #FACILITY-10515
-rewrite ^/prepare-aftercare/rules-expectations-sober-living-program/?$ https://$host/addiction-treatment-new-jersey/aftercare/sober-living/rules-expectations/ permanent;
-rewrite ^/prepare-aftercare/roles-sponsor-sponsee/?$ https://$host/addiction-treatment-new-jersey/aftercare/roles-sponsor-sponsee/ permanent;
 rewrite ^/research/history-evolution-mental-health-treatment/?$ https://$host/addiction-info/history-evolution-mental-health-treatment/ permanent;
 #FACILITY-9332
 rewrite ^/consulting-experts/clinic/?$ https://$host/ permanent;
@@ -337,3 +335,33 @@ rewrite ^/research/?$ https://$host/addiction-info/ permanent;
 rewrite ^/addiction-demographics/musculoskeletal-system/?$ https://$host/addiction-treatment/comorbid-medical-conditions/musculoskeletal-system/ permanent;
 
 rewrite ^/addiction-treatment-new-jersey/admissions/families/after-rehab/?$ https://$host/addiction-treatment-new-jersey/admissions/families/ permanent;
+#FACILITY-10715
+rewrite ^/life-after-addiction/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/fix-finances/?$ https://$host/addiction-treatment-new-jersey/aftercare/fix-finances/ permanent;
+rewrite ^/life-after-addiction/relationships/?$ https://$host/addiction-treatment-new-jersey/aftercare/relationships/ permanent;
+rewrite ^/life-after-addiction/resolve-legal-problems/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/career-path/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/diet-exercise/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/diet-exercise/get-fit-approaches/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/diet-exercise/nutrition/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/diet-exercise/options/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/diet-exercise/supplements-vitamins/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/education/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/leisure-hobby/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/preventative-care/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/preventative-care/medications/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/life-after-addiction/preventative-care/sleep/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/drug-dreams/?$ https://$host/blog/drug-dreams/ permanent;
+rewrite ^/prepare-aftercare/12-step-support-groups/?$ https://$host/addiction-treatment-new-jersey/aftercare/12-step-support-groups/ permanent;
+rewrite ^/prepare-aftercare/non-12-step-support-groups/?$ https://$host/addiction-treatment-new-jersey/aftercare/non-12-step-support-groups/ permanent;
+rewrite ^/prepare-aftercare/roles-sponsor-sponsee/?$ https://$host/addiction-treatment-new-jersey/aftercare/roles-sponsor-sponsee/ permanent;
+rewrite ^/prepare-aftercare/rules-expectations-sober-living-program/?$ https://$host/addiction-treatment-new-jersey/aftercare/sober-living/rules-expectations/ permanent;
+rewrite ^/prepare-aftercare/benefits-life-coach/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/benefits-sober-escort/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/list-support-groups/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/relapse-freelapse-meaning/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/sober-living-homes-transition/?$ https://$host/addiction-treatment-new-jersey/aftercare/sober-living/ permanent;
+rewrite ^/addiction-treatment-new-jersey/after-rehab/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
+rewrite ^/prepare-aftercare/tips-avoid-relapse/?$ https://$host/addiction-treatment-new-jersey/aftercare/relapse-prevention/ permanent;
+rewrite ^/blog/plan-sober-halloween/?$ https://$host/blog/sober-halloween/ permanent;
