--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -23,8 +23,8 @@ rewrite ^/hippa-policy/?$ https://$host/hipaa-policy/ permanent;
 #FACILITY-1735
 rewrite ^/benzodiazepines/limbitrol/?$ https://$host/benzodiazepines/ permanent;
 rewrite ^/benzodiazepines/zolpidem-ambien/?$ https://$host/addiction-info/ permanent;
-#FACILITY-2705
-rewrite ^/blog/$ https://$host/addiction-blog/ permanent;
+#FACILITY-11140
+rewrite ^/addiction-blog/$ https://$host/blog/ permanent;
 rewrite ^/addiction-blog/tag/$ https://$host/blog/tag/ permanent;
 #FACILITY-3199
 rewrite ^/stop-drinking-alcohol/history-wine/?$ https://$host/stop-drinking-alcohol/history-liquor/ permanent;
