--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -378,7 +378,7 @@ rewrite ^/blog/benefits-of-animals-in-addiction-treatment/?$ https://$host/blog/
 rewrite ^/blog/facing-the-signs-of-addiction/?$ https://$host/blog/about-addiction/facing-the-signs-of-addiction/ permanent;
 rewrite ^/blog/alcohol-and-pregnancy-the-cdc-maintains-the-two-dont-mix/?$ https://$host/blog/about-addiction/alcohol-and-pregnancy-the-cdc-maintains-the-two-dont-mix/ permanent;
 rewrite ^/blog/prevalence-substance-abuse-us/?$ https://$host/blog/about-addiction/prevalence-substance-abuse-us/ permanent;
-rewrite ^/blog/ptsd-and-addiction-the-connection/?$ https://$host/blog/about-addiction/ptsd-and-addiction-the-connection/ permanent;
+rewrite ^/blog/ptsd-and-addiction-the-connection/?$ https://$host/blog/about-addiction/ptsd-and-addiction/ permanent;
 rewrite ^/blog/stimulant-study-drugs-ethics-addiction/?$ https://$host/blog/about-addiction/stimulant-study-drugs-ethics-addiction/ permanent;
 rewrite ^/blog/overdose-awareness-day/?$ https://$host/blog/events-updates/overdose-awareness-day/ permanent;
 rewrite ^/blog/freedom-from-drugs-alcohol/?$ https://$host/blog/events-updates/freedom-from-drugs-alcohol/ permanent;
@@ -515,3 +515,9 @@ rewrite ^/blog/benefits-of-therapy-in-substance-misuse-treatment/?$ https://$hos
 rewrite ^/blog/why-the-lgbtq-treatment-program-may-be-the-perfect-fit/?$ https://$host/blog/treatment/why-the-lgbtq-treatment-program-may-be-the-perfect-fit/ permanent;
 rewrite ^/blog/why-the-veterans-and-first-responders-treatment-program-can-be-beneficial/?$ https://$host/blog/treatment/why-the-veterans-and-first-responders-treatment-program-can-be-beneficial/ permanent;
 rewrite ^/blog/how-to-support-a-loved-one-in-addiction-treatment/?$ https://$host/blog/treatment/how-to-support-a-loved-one-in-addiction-treatment/ permanent;
+#FACILITY-10759
+rewrite ^/contributors/mark-calarco/?$ https://$host/staff/ permanent;
+rewrite ^/bipolar-disorder-3/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/addiction-demographics/different-races/?$ https://$host/addiction-demographics/ permanent;
+rewrite ^/research/pharmaceutical-industry/abbvie/?$ https://$host/addiction-info/pharmaceutical-industry/abbvie/ permanent;
+rewrite ^/blog/about-addiction/ptsd-and-addiction-the-connection/?$ https://$host/blog/about-addiction/ptsd-and-addiction/ permanent;
