--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -25,7 +25,7 @@ rewrite ^/benzodiazepines/limbitrol/?$ https://$host/benzodiazepines/ permanent;
 rewrite ^/benzodiazepines/zolpidem-ambien/?$ https://$host/addiction-info/ permanent;
 #FACILITY-11140
 rewrite ^/addiction-blog/$ https://$host/blog/ permanent;
-rewrite ^/addiction-blog/tag/$ https://$host/blog/tag/ permanent;
+rewrite ^/addiction-blog/tag/$ https://$host/blog/ permanent;
 #FACILITY-3199
 rewrite ^/stop-drinking-alcohol/history-wine/?$ https://$host/stop-drinking-alcohol/history-liquor/ permanent;
 rewrite ^/stop-drinking-alcohol/history-beer/?$ https://$host/stop-drinking-alcohol/history-liquor/ permanent;
@@ -521,3 +521,5 @@ rewrite ^/bipolar-disorder-3/?$ https://$host/co-occurring-disorders/bipolar/ pe
 rewrite ^/addiction-demographics/different-races/?$ https://$host/addiction-demographics/ permanent;
 rewrite ^/research/pharmaceutical-industry/abbvie/?$ https://$host/addiction-info/pharmaceutical-industry/abbvie/ permanent;
 rewrite ^/blog/about-addiction/ptsd-and-addiction-the-connection/?$ https://$host/blog/about-addiction/ptsd-and-addiction/ permanent;
+#FACILITY-11155
+rewrite ^/blog/tag/?$ https://$host/blog/ permanent;
