--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -523,3 +523,20 @@ rewrite ^/research/pharmaceutical-industry/abbvie/?$ https://$host/addiction-inf
 rewrite ^/blog/about-addiction/ptsd-and-addiction-the-connection/?$ https://$host/blog/about-addiction/ptsd-and-addiction/ permanent;
 #FACILITY-11155
 rewrite ^/blog/tag/?$ https://$host/blog/ permanent;
+#FACILITY-10761
+rewrite ^/benzodiazepines/halcion-triazolam/?$ https://$host/benzodiazepines/ permanent;
+rewrite ^/valium/?$ https://$host/benzodiazepines/diazepam-valium/ permanent;
+rewrite ^/xanax/dangers-of-snorting/?$ https://$host/benzodiazepines/alprazolam-xanax/dangers-of-snorting/ permanent;
+rewrite ^/xanax/mixing-with-alcohol/?$ https://$host/benzodiazepines/alprazolam-xanax/mixing-with-alcohol/ permanent;
+rewrite ^/xanax/overdose/?$ https://$host/benzodiazepines/alprazolam-xanax/overdose/ permanent;
+rewrite ^/xanax/withdrawal/?$ https://$host/benzodiazepines/alprazolam-xanax/withdrawal/ permanent;
+rewrite ^/xanax/signs-of-abuse/?$ https://$host/benzodiazepines/alprazolam-xanax/ permanent;
+rewrite ^/xanax/?$ https://$host/benzodiazepines/alprazolam-xanax/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/benzodiazepines/?$ https://$host/detox-process/medications/benzodiazepines/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/acamprosate/?$ https://$host/detox-process/medications/acamprosate/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/clonidine/?$ https://$host/detox-process/medications/clonidine/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/desipramine-norpramin/?$ https://$host/detox-process/medications/desipramine-norpramin/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/disulfan/?$ https://$host/detox-process/medications/disulfan/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/naltrexone/?$ https://$host/detox-process/medications/naltrexone/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/phenobarbital/?$ https://$host/detox-process/medications/phenobarbital/ permanent;
