--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -389,7 +389,7 @@ rewrite ^/blog/dr-constantine-diakolios-joins-sunrise-house-treatment-team/?$ ht
 rewrite ^/blog/sober-st-patricks-day/?$ https://$host/blog/events-updates/sober-st-patricks-day/ permanent;
 rewrite ^/blog/sunrise-house-christmas-tree-lighting/?$ https://$host/blog/events-updates/sunrise-house-christmas-tree-lighting/ permanent;
 rewrite ^/blog/snow-at-sunrise/?$ https://$host/blog/events-updates/snow-at-sunrise/ permanent;
-rewrite ^/blog/announcing-launch-of-onsite-covid-19-testing/?$ https://$host/blog/events-updates/announcing-launch-of-onsite-covid-19-testing/ permanent;
+rewrite ^/blog/announcing-launch-of-onsite-covid-19-testing/?$ https://$host/blog/events-updates/coronavirus-notice/ permanent;
 rewrite ^/blog/sunrise-welcomes-new-ceo/?$ https://$host/blog/events-updates/sunrise-welcomes-new-ceo/ permanent;
 rewrite ^/blog/hockey-star-chris-therien-opens-up-about-new-career-in-addiction-recovery/?$ https://$host/blog/events-updates/hockey-star-chris-therien-opens-up-about-new-career-in-addiction-recovery/ permanent;
 rewrite ^/blog/coronavirus-notice/?$ https://$host/blog/events-updates/coronavirus-notice/ permanent;
@@ -402,7 +402,7 @@ rewrite ^/blog/staying-sober-while-spouse-drinks/?$ https://$host/blog/life-in-r
 rewrite ^/blog/sober-inner-circle/?$ https://$host/blog/life-in-recovery/sober-inner-circle/ permanent;
 rewrite ^/blog/top-5-sober-things-nj-thanksgiving-weekend/?$ https://$host/blog/life-in-recovery/top-5-sober-things-nj-thanksgiving-weekend/ permanent;
 rewrite ^/blog/sober-survival-guide-for-winter/?$ https://$host/blog/life-in-recovery/sober-survival-guide-for-winter/ permanent;
-rewrite ^/blog/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/best-gifts-give-someone-new-addiction-recovery/ permanent;
+rewrite ^/blog/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
 rewrite ^/blog/10-tips-building-healthy-relationships-early-sobriety/?$ https://$host/blog/life-in-recovery/10-tips-building-healthy-relationships-early-sobriety/ permanent;
 rewrite ^/blog/5-traits-look-people-will-help-stay-sober/?$ https://$host/blog/life-in-recovery/5-traits-look-people-will-help-stay-sober/ permanent;
 rewrite ^/blog/5-ways-invest-recovery/?$ https://$host/blog/life-in-recovery/5-ways-invest-recovery/ permanent;
@@ -540,3 +540,6 @@ rewrite ^/detox-process/medications-ease-pain-withdrawals/desipramine-norpramin/
 rewrite ^/detox-process/medications-ease-pain-withdrawals/disulfan/?$ https://$host/detox-process/medications/disulfan/ permanent;
 rewrite ^/detox-process/medications-ease-pain-withdrawals/naltrexone/?$ https://$host/detox-process/medications/naltrexone/ permanent;
 rewrite ^/detox-process/medications-ease-pain-withdrawals/phenobarbital/?$ https://$host/detox-process/medications/phenobarbital/ permanent;
+#FACILITY-10762
+rewrite ^/blog/events-updates/announcing-launch-of-onsite-covid-19-testing/?$ https://$host/blog/events-updates/coronavirus-notice/ permanent;
+rewrite ^/blog/life-in-recovery/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
