--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -543,3 +543,5 @@ rewrite ^/detox-process/medications-ease-pain-withdrawals/phenobarbital/?$ https
 #FACILITY-10762
 rewrite ^/blog/events-updates/announcing-launch-of-onsite-covid-19-testing/?$ https://$host/blog/events-updates/coronavirus-notice/ permanent;
 rewrite ^/blog/life-in-recovery/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
+#FACILITY-10763
+rewrite ^/contributors/natoiya-sears/?$ https://$host/staff/ permanent;
