--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -545,3 +545,7 @@ rewrite ^/blog/events-updates/announcing-launch-of-onsite-covid-19-testing/?$ ht
 rewrite ^/blog/life-in-recovery/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
 #FACILITY-10763
 rewrite ^/contributors/natoiya-sears/?$ https://$host/staff/ permanent;
+#FACILITY-11692
+rewrite ^/polydrug-use/benzo-barbs/?$ https://$host/polydrug-use/ permanent;
+rewrite ^/polydrug-use/mdma-alcohol/?$ https://$host/polydrug-use/ permanent;
+rewrite ^/polydrug-use/benzo-narcotics/?$ https://$host/polydrug-use/benzodiazepines-opioids/ permanent;
